--- a/app/views/front/db_admin.html.erb
+++ b/app/views/front/db_admin.html.erb
@@ -22,7 +22,7 @@
 		<tr>
 			<td><%=record.title%></td>
 			<td><%=record.rating%></td>
-			<td><!--썸네일?--></td>
+			<td><%=record.thumbnail%></td>
 			<td><%=record.category%></td>
 			<td><%=record.explain%></td>
 			<td><%=record.hashtag%></td>
