--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -7,7 +7,7 @@
 @import "bootstrap";
 
 *{
-border:solid 1px black;
+//border:solid 1px black;
 }
 html, body{
 height:100%;
@@ -20,17 +20,22 @@ height:100%;
 
 display:table;
 width:100%;
-height:7%;
+height:8%;
 text-align:center;
-
+background-color: #BAD2BF;
+margin-bottom:1%;
 
 }
 		
 	.service-title{
 
-	vertical-align:middle;
-	display:table-cell;
-	font-size:1.5em;
+      vertical-align: middle;
+      display: table-cell;
+      font-size: 1.5em;
+      color: transparent;
+      background-image: url(/IMG_0104.png);
+      background-repeat: no-repeat;
+      background-position-x: center;
 
 	}
 
@@ -46,11 +51,13 @@ width:100%;
 	.tag-button{
 
 	display:table;
-	height:50%;
-	width:25%;
+	height:48%;
+	width:23%;
+    margin:1%;
 	float:left;
 	border-radius:15px;
-	border:solid 1px black;
+	border:solid 1px #a5c5ac;
+    color:black;
 
 	}
 
@@ -60,6 +67,7 @@ width:100%;
 	vertical-align:middle;
 	text-align:center;
 	font-size:1em;
+
 
 	}
 
@@ -77,7 +85,7 @@ overflow-y: auto;
 
 	.content-block{
 
-	height:20%;
+	height:14%;
 	width:100%;
 
 	}
@@ -94,22 +102,66 @@ overflow-y: auto;
 		display:table-cell;
 		vertical-align:middle;
 		font-size:1.5em;
+        color: #95989a;
 		}
 	.content-thumbnail{
 	float:left;
 	height:100%;
-	width:17%;
-	border-radius:15px;
-
+	width:12%;
+    margin-right:4%;
 	}
+      .thumbnail-img{
+        margin:auto;
+        margin-top:30%;
+        height:60%;
+        width:100%;
+        border-radius:100%;
+      }
 	.content-title{
 	float:left;
-
+    height:50%;
+    display: table;
 	}
+      .title-text{
+      display:table-cell;
+      color:black;
+      vertical-align: middle;
+      font-size:1.2em;
+
+
+      }
 	.content-explain{
-	float:left;
+	float:right;
+    width:30%;
+    height:50%;
+    display: table;
 
 	}
+      .explain-text{
+      display:table-cell;
+      vertical-align: middle;
+
+      }
 	.content-hashtag{
+    float:left;
+    display: table;
+    height:50%;
+    width:65%;
 
 	}
+
+      .hashtag-cell{
+        display:table-cell;
+        vertical-align:middle;
+        color:#a8a8a8;
+
+      }
+
+    .content-border{
+      margin-top:0;
+      margin-bottom:0;
+      margin-left:5%;
+      margin-right:5%;
+      width:90%;
+      height:1px;
+    }
