--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -1,27 +1,45 @@
 <div class='browser-contents'>
 
-	<% @merchant.each do |record| %>
-	
-	<div class=content-block>
+	<% i=1
+    @merchant.each do |record|
+
+  %>
+
+  <a href="/move/<%=record.id%>">
+  <div class=content-block>
 	
 		<div class=content-ranking>
-			<span class=ranking-number>1</span>
+			<span class=ranking-number><%=i%></span>
 		</div>
 		<div class=content-thumbnail>
-
+      <div class="thumbnail-img" style="background-color: <%= record.thumbnail%>;"></div>
 		</div>
 		<div class=content-title>
-
+      <span class="title-text"><%= record.title%></span>
 		</div>
 		<div class=content-explain>
-
+      <span class="explain-text"><%= record.explain%></span>
 		</div>
 		<div class=content-hashtag>
+      <%
+        hashtag_array = record.hashtag.gsub(' ','').split(',')
+        hashtag_text = ""
+
+        hashtag_array.each do |one|
+
+         hashtag_text = hashtag_text + '#' + one +' '
+
+        end
+        i= i+1;
+      %>
+      <span class="hashtag-cell"><%=hashtag_text%></span>
 
 		</div>
 
 
-	</div>		
+	</div>
+  </a>
+  <hr class="content-border">
 	
 
 
@@ -29,3 +47,4 @@
 
 
 </div>
+
