--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -14,13 +14,14 @@ height:100%;
 
 }
 
+
 // top nav bar
 
 .top-bar{
 
 display:table;
 width:100%;
-height:8%;
+height:10%;
 text-align:center;
 background-color: #BAD2BF;
 margin-bottom:1%;
@@ -33,11 +34,9 @@ margin-bottom:1%;
       display: table-cell;
       font-size: 1.5em;
       color: transparent;
-      background-image: url(/IMG_0104.png);
-      background-repeat: no-repeat;
-      background-position-x: center;
+      background: url(/assets/IMG_0104.png) no-repeat center;
 
-	}
+    }
 
 // tag-browser
 
@@ -51,7 +50,7 @@ width:100%;
 	.tag-button{
 
 	display:table;
-	height:48%;
+	height:43%;
 	width:23%;
     margin:1%;
 	float:left;
@@ -60,6 +59,11 @@ width:100%;
     color:black;
 
 	}
+
+    .tag-button-clicked{
+    color:white;
+    background-color:#a5c5ac;
+    }
 
 	.tag-text{
 
@@ -125,7 +129,7 @@ overflow-y: auto;
       .title-text{
       display:table-cell;
       color:black;
-      vertical-align: middle;
+      vertical-align:bottom;
       font-size:1.2em;
 
 
@@ -139,7 +143,7 @@ overflow-y: auto;
 	}
       .explain-text{
       display:table-cell;
-      vertical-align: middle;
+      vertical-align: bottom;
 
       }
 	.content-hashtag{
@@ -152,7 +156,7 @@ overflow-y: auto;
 
       .hashtag-cell{
         display:table-cell;
-        vertical-align:middle;
+        vertical-align:top;
         color:#a8a8a8;
 
       }
