--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -34,7 +34,7 @@ margin-bottom:1%;
       display: table-cell;
       font-size: 1.5em;
       color: transparent;
-      background: url(/assets/IMG_0104.png) no-repeat center;
+      background: url(http://platy.life/assets/IMG_0104.PNG) no-repeat center;
 
     }
 
