--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -34,7 +34,7 @@ margin-bottom:1%;
       display: table-cell;
       font-size: 1.5em;
       color: transparent;
-      background: url(http://platy.life/assets/IMG_0104.PNG) no-repeat center;
+      background: url('/assets/IMG_0104.PNG') no-repeat center;
 
     }
 
@@ -120,6 +120,9 @@ overflow-y: auto;
         height:60%;
         width:100%;
         border-radius:100%;
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: center;
       }
 	.content-title{
 	float:left;
@@ -169,3 +172,10 @@ overflow-y: auto;
       width:90%;
       height:1px;
     }
+
+//bridge
+
+.bridge{
+  height:100%;
+  background: url('/assets/bridge.png') no-repeat center;
+}
