--- a/app/views/front/browse/_tag_browser.html.erb
+++ b/app/views/front/browse/_tag_browser.html.erb
@@ -2,7 +2,7 @@
 <div class=tag-browser>
 
 	<% @head_tag.each do |tag| %>
-	<div class=tag-button id="<%=tag%>"  onclick="tag_sort();tag_toggle(this);">
+	<div class=tag-button id="<%=tag%>"  onclick="tag_toggle(this);tag_sort();">
 		<span class=tag-text ><%= '#'+tag%></span>
 
 	</div>
@@ -16,9 +16,20 @@
   //태그를 입력받는다 제이쿼리로 보낸다
   //제이슨으로 받아서 틀 하나 만들어두고 반복문으로 dom재생성한다
   //아니면 아래 부분만 새로운 데이터로 리로드한다
-  function tag_sort(tag){
-      var tag = tag;
+  function tag_sort(){
+      tags = $('.tag-button-clicked');
+      parameter = "";
+      $.each(tags,function(index, value){
+          parameter = parameter +','+ value.getAttribute('id');
 
+
+      });
+
+      $(".browser-contents").fadeOut(300).load("/contents/"+parameter, function(){}).fadeIn(300);
+
+      // 반복문 만들어서 string으로 붙인 다음에 파라미터로 넘긴다
+      // index창에서는 파라미터 값에 따라 표시되는 record를 바꾸고
+      // 뷰페이지에서는 해당 레코드배열을 표시해주게 된다
 
 
 
