--- a/app/views/front/contents_reload.html.erb
+++ b/app/views/front/contents_reload.html.erb
@@ -1,49 +1,2 @@
 
-
-  <% i=1
-     @merchant.each do |record|
-
-  %>
-
-      <a href="/move/<%=record.id%>">
-        <div class=content-block>
-
-          <div class=content-ranking>
-            <span class=ranking-number><%=i%></span>
-          </div>
-          <div class=content-thumbnail>
-            <div class="thumbnail-img" style="background-image: url('<%= record.thumbnail%>');"></div>
-          </div>
-          <div class=content-title>
-            <span class="title-text"><%= record.title%></span>
-          </div>
-          <div class=content-explain>
-            <span class="explain-text"><%= record.explain%></span>
-          </div>
-          <div class=content-hashtag>
-            <%
-              hashtag_array = record.category.gsub(' ','').split(',')
-              hashtag_text = ""
-
-              hashtag_array.each do |one|
-
-                hashtag_text = hashtag_text + '#' + one +' '
-
-              end
-              i= i+1;
-            %>
-            <span class="hashtag-cell"><%=hashtag_text%></span>
-
-          </div>
-
-
-        </div>
-      </a>
-      <hr class="content-border">
-
-
-
-  <% end %>
-
-
-
+<%= render partial: "front/browse/tag_browser" %>
