--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -2,9 +2,14 @@
 
 
 
-<%= render partial: "front/browse/top_bar" %>
-<%= render "front/browse/tag_browser" %>
-<%= render "front/browse/contents" %>
-
+<div class=top-bar>
+  <%= render partial: "front/browse/top_bar" %>
+</div>
+<div class="tag-browser">
+  <%= render "front/browse/tag_browser" %>
+</div>
+<div class="browser-contents">
+  <%= render "front/browse/contents" %>
+</div>
 
 
