--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -5,7 +5,7 @@
 
   %>
 
-  <a href="/move/<%=record.id%>">
+  <a href="/outlink/<%=record.id%>">
   <div class=content-block>
 	
 		<div class=content-ranking>
