--- a/app/views/front/outlink.html.erb
+++ b/app/views/front/outlink.html.erb
@@ -4,7 +4,7 @@
 <div class="outlink-frame">
   <%= render "front/outframe/outlink_frame"%>
 </div>
-<% if @device_check %>
+<% if false#@device_check %>
 <div class="outlink-footer">
   <%= render "front/outframe/outlink_footer"%>
 </div>
