--- a/app/views/front/outframe/_outlink_frame.html.erb
+++ b/app/views/front/outframe/_outlink_frame.html.erb
@@ -1,10 +1,11 @@
 <div class="bridge"></div>
-<iframe src="<%=@record.url%>" height="350px" width="500pxiiiiiiiii"style="display:block;" class="outlink-iframe">
+<iframe style="display:none;" class="outlink-iframe">
 </iframe>
+
 
 <script>
   $(document).ready(function(){
-      setTimeout(function(){ $(".bridge").hide(); $(".outlink-iframe").show(); }, 100);
+      setTimeout(function(){ $(".bridge").hide(); $(".outlink-iframe").show().attr('src',"<%=@record.url%>"); }, 100)
 
   })
 
