--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -52,8 +52,10 @@ width:100%;
 	display:table;
 	height:43%;
 	width:23%;
-    margin:1%;
-    position:relative;
+    margin-top:1%;
+    margin-bottom:1%;
+    margin-left:1.3%;
+    margin-right:1.3%;
 	float:left;
 	border-radius:15px;
 	border:solid 1px #a5c5ac;
@@ -210,8 +212,6 @@ overflow-y: auto;
 .outlink-frame{
   height:93%;
   width:100%;
-  -webkit-overflow-scrolling: touch !important;
-  overflow-y:scroll;
 
 }
   .outlink-iframe{
