--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -212,12 +212,15 @@ overflow-y: auto;
 .outlink-frame{
   height:93%;
   width:100%;
+  max-width:100%;
+  overflow-y:auto;
 
 }
   .outlink-iframe{
     border:none;
     height:100%;
     width:100%;
+    max-width:100%;
   }
 
 
