--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -213,7 +213,7 @@ overflow-y: auto;
   height:93%;
   width:100%;
   max-width:100%;
-  overflow-y:auto;
+  overflow-x:auto;
 
 }
   .outlink-iframe{
