--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -220,6 +220,8 @@ overflow-y: auto;
     height:100%;
     width:100%;
     min-width:100%;
+    overflow-y:scroll;
+    -webkit-overflow-scrolling: touch;
     position:absolute;
     top:0;
     left:0;
