--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -210,8 +210,9 @@ overflow-y: auto;
 
 
 .outlink-frame{
-  height:93%;
   width:100%;
+  height:0;
+  padding-bottom:100%;
   position:relative;
 
 }
