--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -214,6 +214,8 @@ overflow-y: auto;
   height:0;
   padding-bottom:100%;
   position:relative;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
 
 }
   .outlink-iframe{
