--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -230,6 +230,8 @@ overflow-y: auto;
     left:0;
     bottom:0;
     right:0;
+    -webkit-transform: scale(1.0);
+    -webkit-transform-origin: 0 0;
   }
 
 
