--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -211,8 +211,7 @@ overflow-y: auto;
 
 .outlink-frame{
   width:100%;
-  height:0;
-  padding-bottom:100%;
+  height:92%;
   position:relative;
   overflow:auto;
   -webkit-overflow-scrolling:touch;
