--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,7 +1,5 @@
 
 
-
-
 <div class=top-bar>
   <%= render partial: "front/browse/top_bar" %>
 </div>
@@ -10,6 +8,9 @@
 </div>
 <div class="browser-contents">
   <%= render "front/browse/contents" %>
+</div>
+<div class="modal fade shop-product-popup" id="test" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <%= render "front/modal/shop_product"%>
 </div>
 
 
