--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -175,9 +175,22 @@ overflow-y: auto;
       width:90%;
       height:1px;
     }
+//shop-product list modal
+.modal.fade:not(.in) .modal-dialog {
+  -webkit-transform: translate3d(25%, 0, 0);
+}
+.shop-product-popup .modal-dialog{
+  margin:0;
+  height:100%;
+}
 
+.modal-content{
+  height:100%;
+  border-radius:0;
+  border:0;
+}
 
-//outlink
+  //outlink
 
 .top-backnav{
   height:7%;
@@ -219,8 +232,8 @@ overflow-y: auto;
 }
   .outlink-iframe{
     border:none;
-    height:100%;
-    width:100%;
+    height:1024px;
+    width:1px;
     min-width:100%;
     overflow-y:scroll;
     -webkit-overflow-scrolling: touch;
@@ -233,7 +246,11 @@ overflow-y: auto;
     -webkit-transform-origin: 0 0;
   }
 
+  .frametest{
+    width:100%;
+    height:100%;
 
+  }
 //bridge
 
 .bridge{
