--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -1,15 +1,57 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-      <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      <div class="modal-header-section">
+        <div class="backbutton" data-dismiss="modal">
+
+          <span class="glyphicon glyphicon-menu-left"></span>
+        </div>
+      </div>
+      <div class="modal-header-section">
+        <!--<div class="modal-shoplogo"></div>-->
+        <div class="modal-shoptitle">
+          <span><%=@merchant.title%></span>
+        </div>
+        <!--<div class="modal-shoptags"><%= %></div>-->
+      </div>
+      <div class="modal-header-section">
+
+      </div>
     </div>
     <div class="modal-body">
       ...
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
     </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary">Save changes</button>
-    </div>
+    <a href="<%=@merchant.url%>" target="_blank">
+      <div class="modal-footer">
+        <span>쇼핑몰로 이동</span>
+      </div>
+    </a>
   </div>
 </div>
