--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -53,6 +53,15 @@
         });
 
     }
+    $(".modal").on("shown.bs.modal", function()  { // any time a modal is shown
+        var urlReplace = "#" + $(this).attr('id'); // make the hash the id of the modal shown
+        history.pushState(null, null, urlReplace); // push state that hash into the url
+    });
+
+    // If a pushstate has previously happened and the back button is clicked, hide any modals.
+    $(window).on('popstate', function() {
+        $(".modal").modal('hide');
+    });
 
 
   </script>
