--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -1,25 +1,25 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <div class="modal-header-section">
+      <div class="modal-header-left">
         <div class="backbutton" data-dismiss="modal">
 
           <span class="glyphicon glyphicon-menu-left"></span>
         </div>
       </div>
-      <div class="modal-header-section">
+      <div class="modal-header-center">
         <!--<div class="modal-shoplogo"></div>-->
         <div class="modal-shoptitle">
           <span><%=@merchant.title%></span>
         </div>
         <!--<div class="modal-shoptags"><%= %></div>-->
       </div>
-      <div class="modal-header-section">
+      <!--<div class="modal-header-section">-->
 
-      </div>
+    <!--</div>-->
     </div>
     <div class="modal-body">
-      ...
+      <div class
       <br />
       <br />
       <br />
