--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -52,10 +52,11 @@ width:100%;
 	display:table;
 	height:43%;
 	width:23%;
-    margin-top:1%;
-    margin-bottom:1%;
-    margin-left:1.3%;
-    margin-right:1.3%;
+    margin:1%;
+    //margin-top:1%;
+    //margin-bottom:1%;
+    //margin-left:1.3%;
+    //margin-right:1.3%;
 	float:left;
 	border-radius:15px;
 	border:solid 1px #a5c5ac;
@@ -200,9 +201,9 @@ overflow-y: auto;
       min-height:10%;
 //나중에 기능 추가해보자 이거 하려면 탑바랑 컨텐츠가 같은 div 상에 존재해야 편할듯
     }
-    .modal-header-section{
+    .modal-header-left{
       float:left;
-      width:33%;
+      width:15%;
       height:100%;
     }
       .backbutton{
@@ -219,6 +220,11 @@ overflow-y: auto;
           font-size:1.5em;
 
         }
+    .modal-header-center{
+      float:left;
+      width:70%;
+      height:100%;
+    }
       .modal-shoptitle{
         text-align:center;
         height:100%;
