--- a/app/views/front/db_input.html.erb
+++ b/app/views/front/db_input.html.erb
@@ -1,5 +1,9 @@
 
 <form action=/db_input method=post>
+<select name="table">
+  <option value="merchant">merchant</option>
+  <option value="product">product</option>
+</select>
 <textarea rows="100" cols="100" name="input_textarea"></textarea>
 <input type=submit value="input">
 </form>
