--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <script>
+      function imgError(image,type,id) {
+          image.onerror = "";
+          console.log(image);
+          $.ajax({
+            url:"/img_reproduce",
+            data:{type:type, id:id},
+            method:"POST",
+            success:function(data){
+                image.src=data.url;
+            }
+          });
+
+          return true;
+      };
+
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -18,6 +33,7 @@
 
       ga('create', 'UA-96186716-1', 'auto');
       ga('send', 'pageview');
+
 
   </script>
   </head>
