--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -57,14 +57,39 @@
     }
 //    $(".modal").on("shown.bs.modal", function()  { // any time a modal is shown
 //        var urlReplace = "#" + $(this).attr('id'); // make the hash the id of the modal shown
-//        history.pushState(null, null, urlReplace); // push state that hash into the url
 //    });
 //
 //    // If a pushstate has previously happened and the back button is clicked, hide any modals.
 //    $(window).on('popstate', function() {
 //        $(".modal").modal('hide');
 //    });
+    $('div.modal').on('show.bs.modal', function() {
+        var modal = this;
+        var hash = modal.id;
+        window.location.hash = hash;
+        window.onhashchange = function() {
+            if (!location.hash){
+                $(modal).modal('hide');
+            }
+        }
+    });
 
+    $('div.modal').on('hidden.bs.modal', function() {
+        var hash = this.id;
+        history.replaceState('', document.title, window.location.pathname);
+    });
+
+    // when close button clicked simulate back
+    $('div.modal button.close').on('click', function(){
+        window.history.back();
+    })
+
+    // when esc pressed when modal open simulate back
+    $('div.modal').keyup(function(e) {
+        if (e.keyCode == 27){
+            window.history.back();
+        }
+    });
 
   </script>
 
