--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -45,6 +45,7 @@
           </div>
         </a>
         <% end %>
+        <div style="height:14%;"></div>
       </div>
     </div>
     <a href="<%=@merchant.url%>" target="_blank">
