--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -32,7 +32,7 @@ a:active {color:black;}
 
 display:table;
 width:100%;
-height:10%;
+height:8%;
 text-align:center;
 background-color: #BAD2BF;
 margin-bottom:1%;
@@ -207,10 +207,12 @@ overflow-y: auto;
 }
   .modal-header{
     padding:0;
-    height:10%;
+    height:8%;
+    background-color:#a5c5ac;
+    color:white;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
-  }
+ }
     .modal-header .shrink{
       min-height:10%;
 //나중에 기능 추가해보자 이거 하려면 탑바랑 컨텐츠가 같은 div 상에 존재해야 편할듯
@@ -255,7 +257,7 @@ overflow-y: auto;
   .modal-body{
     overflow-y:auto;
     -webkit-overflow-scrolling:touch;
-    height:80%;
+    height:90%;
     width:100%;
     background:#e8e8e8;
   }
@@ -288,11 +290,13 @@ overflow-y: auto;
     height:10%;
     display:table;
     text-align:center;
+    background: rgba(128,128,128,0.5);
+    border:none;
   }
     .modal-footer > span{
       display: table-cell;
       vertical-align: middle;
-      color:black;
+      color:white;
       text-decoration: none;
       font-size:1.2em;
     }
