--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -19,9 +19,9 @@
 		<div class=content-title>
       <span class="title-text"><%= record.title%></span>
 		</div>
-		<div class=content-explain>
-      <span class="explain-text"><%= record.explain%></span>
-		</div>
+		<!--<div class=content-explain>-->
+      <!--<span class="explain-text"><%= record.explain%></span>-->
+		<!--</div>-->
 		<div class=content-hashtag>
       <%
         hashtag_array = record.category.gsub(' ','').split(',')
