--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -34,7 +34,7 @@ display:table;
 width:100%;
 height:9%;
 text-align:center;
-background-color: #BAD2BF;
+background-color: #0d694d;
 margin-bottom:1%;
 
 }
@@ -70,14 +70,14 @@ width:100%;
     //margin-right:1.3%;
 	float:left;
 	border-radius:15px;
-	border:solid 1px #a5c5ac;
+	border:solid 1px #1c5b48;
     color:black;
 
 	}
 
     .tag-button-clicked{
     color:white;
-    background-color:#a5c5ac;
+    background-color:#1c5b48;
     }
 
 	.tag-text{
@@ -111,7 +111,7 @@ overflow-y: auto;
 
 	.content-ranking{
 	height:100%;
-	width:15%;
+	width:12%;
 	display:table;
 	text-align:center;
 	float:left;
@@ -126,16 +126,16 @@ overflow-y: auto;
 	.content-thumbnail{
 	float:left;
 	height:100%;
-	width:12%;
+	width:21%;
     margin-right:4%;
 	}
       .thumbnail-img{
         margin:auto;
-        margin-top:30%;
-        height:60%;
+        margin-top:12%;
+        height:75%;
         width:100%;
-        border-radius:100%;
-        background-size:contain;
+        border-radius:4px;
+        background-size:100%;
         background-repeat: no-repeat;
         background-position: center;
       }
@@ -171,7 +171,7 @@ overflow-y: auto;
     float:left;
     display: table;
     height:50%;
-    width:65%;
+    width:60%;
 
 	}
 
@@ -185,9 +185,9 @@ overflow-y: auto;
     .content-border{
       margin-top:0;
       margin-bottom:0;
-      margin-left:5%;
-      margin-right:5%;
-      width:90%;
+      margin-left: 2.5%;
+      margin-right:2.5%;
+      width:95%;
       height:1px;
     }
 //shop-product list modal
@@ -208,7 +208,7 @@ overflow-y: auto;
   .modal-header{
     padding:0;
     height:9%;
-    background-color:#a5c5ac;
+    background-color:#0d694d;
     color:white;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
