--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -34,7 +34,7 @@ display:table;
 width:100%;
 height:9%;
 text-align:center;
-background-color: #0d694d;
+background-color: #ff7171;
 margin-bottom:1%;
 
 }
@@ -70,14 +70,14 @@ width:100%;
     //margin-right:1.3%;
 	float:left;
 	border-radius:15px;
-	border:solid 1px #1c5b48;
+	border:solid 1px #d15753;
     color:black;
 
 	}
 
     .tag-button-clicked{
     color:white;
-    background-color:#1c5b48;
+    background-color:#d15753;
     }
 
 	.tag-text{
@@ -208,7 +208,7 @@ overflow-y: auto;
   .modal-header{
     padding:0;
     height:9%;
-    background-color:#0d694d;
+    background-color:#ff7171;
     color:white;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
