--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -45,7 +45,8 @@ margin-bottom:1%;
       display: table-cell;
       font-size: 1.5em;
       color: transparent;
-      background: url('/assets/IMG_0104.PNG') no-repeat center;
+      background: url('/assets/logo.png') no-repeat center;
+      background-size:32% 75%;
 
     }
 
