--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -26,7 +26,7 @@
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
-              <span><%=record.price%>원</span>
+              <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
               <span></span>
             </div>
           </div>
@@ -41,7 +41,7 @@
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
-              <span><%=record.price%>원</span>
+              <span><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
             </div>
           </div>
         </a>
