--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -38,7 +38,7 @@ a:active {color:black;}
 
 display:table;
 width:100%;
-height:9%;
+height:9vh;
 text-align:center;
 background-color: #ff7171;
 margin-bottom:1%;
@@ -63,10 +63,10 @@ z-index: 10;
 
 .tag-browser{
 
-height:15%;
+height:15vh;
 width:100%;
 position:fixed;
-top:9%;
+top:9vh;
 background: white;
 
 }
@@ -112,7 +112,8 @@ padding:1%;
 height:78%;
 width:100%;
 -webkit-overflow-scrolling: touch;
-margin-top:34%;
+margin-top:24vh;
+
 
 }
 
