tag browser blink fast

--- a/app/views/front/browse/_tag_browser.html.erb
+++ b/app/views/front/browse/_tag_browser.html.erb
@@ -37,7 +37,7 @@
 
   }
 
-  $(document).ready(function () {
+  $(".tag-browser").ready(function () {
       tag_toggle($("#<%=@head_tag[0]%>"));
       setTimeout(function(){ $("#<%=@head_tag[0]%>").click();},1)
 
