--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -75,8 +75,8 @@ background: white;
 
 	display:table;
 	height:43%;
-	width:23%;
-    margin:1%;
+	width:23vw;
+    margin:1% 1vw 1% 1vw;
     //margin-top:1%;
     //margin-bottom:1%;
     //margin-left:1.3%;
