--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -1,3 +1,32 @@
+<script>
+    $('div.modal').on('show.bs.modal', function() {
+        var modal = this;
+        var hash = modal.id;
+        window.location.hash = hash;
+        window.onhashchange = function() {
+            if (!location.hash){
+                $(modal).modal('hide');
+            }
+        }
+    });
+
+    $('div.modal').on('hidden.bs.modal', function() {
+        var hash = this.id;
+        history.replaceState('', document.title, window.location.pathname);
+    });
+
+    // when close button clicked simulate back
+    $('div.modal button.close').on('click', function(){
+        window.history.back();
+    })
+
+    // when esc pressed when modal open simulate back
+    $('div.modal').keyup(function(e) {
+        if (e.keyCode == 27){
+            window.history.back();
+        }
+    });
+</script>
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
@@ -56,3 +85,4 @@
     </a>
   </div>
 </div>
+
