--- a/app/views/front/browse/_tag_browser.html.erb
+++ b/app/views/front/browse/_tag_browser.html.erb
@@ -21,6 +21,7 @@
 
       });
 
+      window.scrollTo(0,0);
       $(".browser-contents").fadeOut(0).load("/contents/"+parameter, function(){}).fadeIn(300).scrollTop(1);
 
 
