--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -1,5 +1,5 @@
 <script>
-  $(".browser-contents").removeClass("background-grey");
+  $("body").removeClass("background-grey");
 </script>
 
 	<% i=1
