--- a/app/views/front/modal/_shop_product.html.erb
+++ b/app/views/front/modal/_shop_product.html.erb
@@ -61,7 +61,7 @@
           </div>
         </a>
         <% end %>
-        <div style="height:10%;"></div>
+        <div style="height:10vh;"></div>
       </div>
       <div class="body-divide">
         <% @product2.each do |record| %>
@@ -75,7 +75,7 @@
           </div>
         </a>
         <% end %>
-        <div style="height:10%;"></div>
+        <div style="height:10vh;"></div>
       </div>
     </div>
     <a href="<%=@merchant.url%>" target="_blank" onclick="ga('send','event','shop-link','<%=@merchant.id%>');">
