--- a/app/views/front/index.html.erb
+++ b/app/views/front/index.html.erb
@@ -1,13 +1,13 @@
 
 
 <div class=top-bar>
-  <%= render partial: "front/browse/top_bar" %>
+  <%= render partial: "front/frame/top_bar" %>
 </div>
-<div class="tag-browser">
-  <%= render "front/browse/tag_browser" %>
+<div class="contents-frame">
+  <%= render "front/frame/contents-frame" %>
 </div>
-<div class="browser-contents">
-  <%= render "front/browse/contents" %>
+<div class="footer">
+  <%= render "front/frame/footer"%>
 </div>
 <div class="modal fade shop-product-popup" id="test" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 </div>
