--- a/app/views/front/db_admin.html.erb
+++ b/app/views/front/db_admin.html.erb
@@ -1,5 +1,6 @@
 <div style="display:block; height:55px; width:100%; text-align:center;">
-<form action='/destroy' method=post onsubmit="return confirm('전부 다 삭제?????');"><input type=submit value="DB날리기"></form>
+  <form action='/destroy' method=post onsubmit="return confirm('샵 전부 다 삭제?????');"><input type=submit value="DB날리기"></form>
+  <form action='/product_destroy' method=post onsubmit="return confirm('제품 전부 다 삭제?????');"><input type=submit value="제품날리기"></form>
 <a href=/db_input>데이터베이스 입력하러가기</a>
 </div>
 <table class="table table-bordered">
